src/test/compile-fail/bad-value-ident-false.rs
fn false() { } //! ERROR found `false` in restricted position
fn main() { }